added grid to the other articles. Lots of styling added as well

--- a/code/index.html
+++ b/code/index.html
@@ -8,14 +8,20 @@
   <link rel="stylesheet" href="./style.css" />
   <!-- meta tag for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <!-- script for the logo -->
   <script src="https://kit.fontawesome.com/2e83762929.js" crossorigin="anonymous"></script>
+  <!-- font Nunito for the page -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300&display=swap');
+  </style>
 </head>
 
 <body>
   <header>
     <!-- This is the start of the header with navigation bar, logo and links -->
     <nav class="navbar">
+
+      <!-- This is the logo-->
       <a class="logo" href="#Puppy-news-logo">
         <i class="fa-solid fa-dog">
         </i>
@@ -51,35 +57,90 @@
 
     </nav>
   </header>
-
+  <!--End of header and start of main-->
   <main>
     <section class="welcome">
-      <!-- Welcome content -->
-      <h1> Welcome to our Puppy news</h1>
-      <p> Here you will find the newest updates about our current puppies! </p>
-      <p> Both mom and dad are toy poodles and our current puppies are Lisa, Nelly and Molly. </p>
+      <div>
+        <!-- Welcome content -->
+        <h1> Welcome to our Puppy news</h1>
+        <p> Here you will find the newest updates about our current puppies! </p>
+        <p> Both mom and dad are toy poodles, dad is more beige in color and mom is brown. Our current puppies are Lisa,
+          Nellie and Mollie. If you are interested in looking at our previous puppies, you can find pictures of them in
+          the archive. </p>
+      </div>
     </section>
 
     <section class="main-article">
-      <!-- The big news content -->
-      <img src="./small-puppy.JPG" alt="Picture of small puppy">
-
-
-
+      <!-- The main article -->
+      <div class="main-article-body">
+        <img src="./small-puppy.JPG" alt="Picture of small puppy">
+        <h2> 4 week old Nellie</h2>
+        <p> la la la la </p>
+        <a href="#"> See more</a>
+      </div>
 
     </section>
 
-    <section class="all-news">
+    <section class="other-articles">
       <!-- All of the other news  -->
-      <img src="./puppy-getting-comfy.JPG" alt="Puppy getting comfy">
-      <img src="./chilling-on-the-couch.JPG" alt="Puppy on the couch">
-      <img src="./waiting-to-play.JPG" alt="Puppy waiting to play">
-      <img src="./cuddling-with-toy.jpg" alt="Puppy cuddling with toy">
-      <img src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+      <div class="article-body">
+        <img class="article-image" src="./puppy-getting-comfy.JPG" alt="Puppy getting comfy">
+        <h2 class="article-title"> Nellie getting comfy </h2>
+        <p class="article-description"> la la la la </p>
+        <a class="article-link" href="#"> See more</a>
+      </div>
 
+      <div class="article-body">
+        <img class="article-image" src="./chilling-on-the-couch.JPG" alt="Puppy on the couch">
+        <h2 class="article-title"> Nellie chilling </h2>
+        <p class="article-description"> la la la la </p>
+        <a class="article-link" href="#"> See more</a>
+      </div>
+
+      <div class="article-body">
+        <img class="article-image" src="./cuddling-with-toy.jpg" alt="Puppy cuddling with toy">
+        <h2 class="article-title"> Nellie cuddling </h2>
+        <p class="article-description"> Here you can see Nellie cuddling with her new friend Winnie-the-Pooh. </p>
+        <a class="article-link" href="#"> See more</a>
+      </div>
+
+      <div class="article-body">
+        <img class="article-image" src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+        <h2 class="article-title"> Nellie waiting to play </h2>
+        <p class="article-description"> Nellie is getting more and more playful for every day. Here you can see her
+          waiting for someone to play with her </p>
+        <a class="article-link" href="#"> See more</a>
+      </div>
+
+      <div class="article-body">
+        <img class="article-image" src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+        <h2 class="article-title"> Nellie cuddling with toy </h2>
+        <p class="article-description"> la la la la </p>
+        <a class="article-link" href="#"> See more</a>
+      </div>
 
     </section>
   </main>
+
+  <footer>
+    <ul>
+      <li>
+        Created by Erica Mechler
+      </li>
+      Test 2
+      <li>
+        <img src="./logo.svg" alt="Technigo-logo">
+      </li>
+
+      <li>
+
+
+      </li>
+    </ul>
+
+
+
+  </footer>
 </body>
 
 </html>
