added styling to the other articles as well

--- a/code/index.html
+++ b/code/index.html
@@ -68,7 +68,51 @@
         <a href="#"> Read more</a>
       </div>
 
-    </section>
+      <section class="other-articles">
+        <!-- All of the other news  -->
+        <div class="article-body">
+          <img src="./puppy-getting-comfy.JPG" alt="Puppy getting comfy">
+          <h2> Nellie getting comfy </h2>
+          <p> At six weeks, a puppy effortlessly embraces comfort. Sleepy sighs
+            fill the air. </p>
+          <a href="#"> Read more</a>
+        </div>
+
+        <div class="article-body">
+          <img src="./chilling-on-the-couch.JPG" alt="Puppy on the couch">
+          <h2> Mollie chilling </h2>
+          <p> Playfulness gives way to
+            sweet naps, and their fluffy innocence captivates hearts.
+          </p>
+          <a href="#"> Read more</a>
+        </div>
+
+        <div class="article-body">
+          <img src="./cuddling-with-toy.jpg" alt="Puppy cuddling with toy">
+          <h2> Mollie cuddling </h2>
+          <p> Mollie is cuddling with her new friend Winnie-the-Pooh. They are best sleeping buddies.
+          </p>
+          <a href="#"> See more</a>
+        </div>
+
+        <div class="article-body">
+          <img src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+          <h2> Waiting to play </h2>
+          <p> Nellie is getting more and more playful for every day. Here you can see
+            her
+            waiting for someone to play. </p>
+          <a href="#"> See more</a>
+        </div>
+
+        <div class="article-body">
+          <img class="article-image" src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+          <h2> Ready for christmas </h2>
+          <p> Wrapped in festive wonder, a puppy experiences their first Christmas. Wide-eyed, they explore twinkling
+            lights, playful bows, and the joy of shared moments. </p>
+          <a href="#"> See more</a>
+        </div>
+
+      </section>
 
 
 
