Added styling to all items for different sizes

--- a/code/index.html
+++ b/code/index.html
@@ -58,62 +58,98 @@
       </div>
     </section>
 
+    <!-- The main article -->
     <section class="main-article">
-      <!-- The main article -->
-      <div id="main-article-body">
+      <!-- The image-element-->
+      <div class="main-article-picture">
         <img src="./small-puppy.JPG" alt="Picture of small puppy">
+      </div>
+
+      <div class="main-article-content">
         <h2> 4 week old Nellie</h2>
         <p> Nellie is now 4 weeks. At four weeks, a puppy is a bundle of fur and energy, eyes wide open to the
           world. </p>
-        <a href="#"> Read more</a>
+        <a class="article-link" href="#"> Read more</a>
       </div>
+    </section>
 
-      <section class="other-articles">
-        <!-- All of the other news  -->
-        <div class="article-body">
+    <section class="other-articles">
+      <div class="article-body">
+        <div class="article-picture">
           <img src="./puppy-getting-comfy.JPG" alt="Puppy getting comfy">
+        </div>
+        <div class="article-content">
           <h2> Nellie getting comfy </h2>
           <p> At six weeks, a puppy effortlessly embraces comfort. Sleepy sighs
             fill the air. </p>
-          <a href="#"> Read more</a>
+          <a class="article-link" href="#"> Read more</a>
         </div>
+      </div>
 
-        <div class="article-body">
+      <div class="article-body">
+        <div class="article-picture">
           <img src="./chilling-on-the-couch.JPG" alt="Puppy on the couch">
+        </div>
+        <div class="article-content">
           <h2> Mollie chilling </h2>
           <p> Playfulness gives way to
             sweet naps, and their fluffy innocence captivates hearts.
           </p>
-          <a href="#"> Read more</a>
+          <a class="article-link" href="#"> Read more</a>
         </div>
+      </div>
 
-        <div class="article-body">
+      <div class="article-body">
+        <div class="article-picture">
           <img src="./cuddling-with-toy.jpg" alt="Puppy cuddling with toy">
+        </div>
+        <div class="article-content">
           <h2> Mollie cuddling </h2>
           <p> Mollie is cuddling with her new friend Winnie-the-Pooh. They are best sleeping buddies.
           </p>
-          <a href="#"> See more</a>
+          <a class="article-link" href="#"> See more</a>
         </div>
+      </div>
 
-        <div class="article-body">
-          <img src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+      <div class="article-body">
+        <div class="article-picture">
+          <img class="article-image" src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+        </div>
+        <div class="article-content">
           <h2> Waiting to play </h2>
           <p> Nellie is getting more and more playful for every day. Here you can see
             her
             waiting for someone to play. </p>
-          <a href="#"> See more</a>
+          <a class="article-link" href="#"> See more</a>
         </div>
+      </div>
 
-        <div class="article-body">
-          <img class="article-image" src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+      <div class="article-body">
+        <div class="article-picture">
+          <img src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+        </div>
+        <div class="article-content">
           <h2> Ready for christmas </h2>
           <p> Wrapped in festive wonder, a puppy experiences their first Christmas. Wide-eyed, they explore twinkling
             lights, playful bows, and the joy of shared moments. </p>
-          <a href="#"> See more</a>
+          <a class="article-link" href="#"> See more</a>
         </div>
+      </div>
+    </section>
+  </main>
 
-      </section>
-
+  <footer>
+    <ul class="footer-container">
+      <li class="name"> Created by Erica Mechler </li>
+      <li>
+        <img class="technigo-logo" src="./logo.svg" alt="Technigo-logo">
+      </li>
+      <li class="follow-text"> Follow <a class="linkedin-logo"
+          href="https://www.linkedin.com/in/erica-mechler-a39b73a8/" target="blank">
+          Linkedin </a>
+      </li>
+    </ul>
+  </footer>
 
 
 </body>
