Fixed mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -23,17 +23,17 @@
         </ul> 
       </div>
     </header>
-
+<section class="news-container">
     <section class="big-news">
       <div class="top-news-img">
         <img src="spaceship.png">
       </div>
       <div class="top-news-text">
         <h2 class="headline">Fifth launch successfull</h2>
-        <p class="healine-2">- With unparalleled excitement, "Alien-Air 385" gracefully touched down on the planet known as Earth, carrying a delegation of 1000 of us from distant stars. As we emerged from our spacecraft, we were met by welcoming committees comprising curious human scientists, diplomats, and representatives. The atmosphere was filled with a mix of awe and apprehension, as we embarked on this historic moment of interstellar connection.</p>
+        <p class="healine-2">- With unparalleled excitement, "Alien-Air 385" gracefully touched down on the planet known as Earth, carrying a delegation of 1000 of us from distant stars. As we emerged from our spacecraft, we were met by welcoming committees comprising curious human scientists, diplomats, and representatives. The atmosphere was filled with a mix of awe and apprehension, as we embarked on this historic moment of interstellar connection.</p> 
       </div>
     </section>
-
+</section>
     <section class="other-news">
       <div class="news">
         <h3 class="news-text">"Strange animal that can be found in human-homes is now known to be called "dog""</h3>
