Update - Removed column for big news + margin tweaks in footer

--- a/code/index.html
+++ b/code/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Change the title below -->
-  <title>Sofia's News Site</title>
+  <title>Azzimews | Sofia's News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <meta name="description"
     content="Current, fun and trending news from the kitten Azzi. Read all about his adventures at Azzimews!">
   <link rel="icon" href="./assets/shield-cat-solid.svg" sizes="any" type="image/svg+xml">
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -86,7 +86,7 @@
         <div class="flex-container news-card">
           <div class="flex-item">
             <p class="extra"> Extra! Extra! Extra!</p>
-            <video autoplay muted aria-controls="">
+            <video autoplay muted controls>
               <source src="./assets/azzi_480.mp4">
             </video>
           </div>
