finished mobile media query, copied all that code to media Q for tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -24,8 +24,9 @@
     </nav>
   </header>
 
-  <div>
-    <p>In the early days of 2024, when people where still eating leftovers from Christmas and realizing how poor they
+  <section class="text-box-flex">
+    <p class="">In the early days of 2024, when people where still eating leftovers from Christmas and realizing how
+      poor they
       where after splurging throughout December even though society was in the middle of the next global Great
       Depression™ a few people in Sweden entered a project that wasn’t a project until... it was a project.<br>
       The author of this webpage was so fully immersed in learning how to code, that all the creativity she had and
@@ -40,8 +41,8 @@
       experience I have the intention to code som kind of translation function because there has to be one - right?
       Also, wouldn’t in be cool to have a function where you can continue brainstorming on this website?
     </p>
-    <button class="button">Brainstorm with me!</button>
-  </div>
+    <button class="brainstorm-button">Brainstorm with me!</button>
+  </section>
 
   <section class="instagram-story-img">
     <img src="hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
@@ -63,7 +64,13 @@
     <img src="Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
     <img src="pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
     <img src="sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
+    <button class="idea-button">View more ideas!</button>
   </section>
+  <footer>
+    <button class="instagram-button">
+      <a href="https://www.instagram.com/thorleifs_as/" target="_blank">Jump to my Instagram</a>
+    </button>
+  </footer>
 </body>
 
 </html>
