first draft with images, placeholder text and responsive layout

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Veggie News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <h1>Veggie News</h1>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red"/>
+      <p>Photo by Ries Bosch on Unsplash</p>
+      <h2>Lupin is the new protein</h2>
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic grape greens j. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens j. Arugula asparagus aubergine avocado azuki bamboo beetroot black-eyed brussels bunya burdock bush cabbage carrot caulie celery chickweed chicory corn cress cucumber dulse earthnut fava garlic gourd groundnut horseradish.
+
+      Amaranth aubergine azuki bamboo bean beet beetroot bitterleaf black-eyed bok bologi bona brussels bunya cabbage carrot caulie celery chard courgette daikon desert eggplant fennel garlic grape green groundnut. Artichoke arugula avocado azuki catsear cauliflower chard collard cress dulse eggplant garbanzo gourd grape j. Amaranth arugula asparagus azuki bamboo bok bona brussels bunya burdock bush carrot caulie cauliflower chard chickpea choy corn cress cucumber dulse earthnut endive fava fennel gram grape j.
+            
+      Artichoke aubergine beet beetroot bell bok bush cauliflower chard chestnut chickweed choy coriander courgette dandelion desert dulse epazote fava gourd green greens j. Cabbage cauliflower chickpea coriander courgette dandelion eggplant endive gourd greens gumbo. Avocado beet bologi bona burdock catsear caulie celery chard chickpea corn courgette cress dandelion epazote esse garlic gourd green gumbo j. Aubergine beetroot bok bush celtuce chickweed chicory courgette garbanzo gourd horseradish.
+      </p>
     </section>
 
     <section class="">
-      <!-- The other news  -->
+      <div class="smallnews">
+        <h3>News</h3>
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
+      <div class="smallnews">
+        <h3>News</h3>
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
+      <div class="smallnews">
+        <h3>News</h3>
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
+      <div class="smallnews">
+        <h3>News</h3>
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
     </section>
   </body>
 </html>
