--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>Book News</title>
+  <title>Fasnacht - The Swiss Carnival</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <!--added:)-->
