added basics of header

--- a/code/index.html
+++ b/code/index.html
@@ -8,12 +8,21 @@
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
   <!--added:)-->
-  <meta name="viewport" content="width-device-width" initial-scale="1.0">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
+    <div class="header">
+      <img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="100px">
+      <nav class="main-nav">
+        <a href="#">What is Fasnacht?</a>
+        <a href="#">Where to celebrate?</a>
+        <a href="#">Archive</a>
+        <a href="#">Copyright & Impressum</a>
+      </nav>
+    </div>
   </header>
 
   <section class="big-news">
