--- a/code/index.html
+++ b/code/index.html
@@ -27,6 +27,19 @@
 
   <section class="big-news">
     <!-- The big news content -->
+    <div>
+      <h1>Güggali-Zunft has well known "Zunftmeister."</h1>
+    </div>
+    <div>
+      <img class=lucerne src="assets/lucerne.jpg" alt="Lucerne at night" height="200px">
+    </div>
+    <div>
+      <p>The new leader of the Güggali-Zunft of Lucerne in 2024 is again Laurentius Moser for the third time in a row.
+        <a
+          href="https://www.bzbasel.ch/zentralschweiz/stadt-region-luzern/fasnacht-2024-gueueggali-zunft-luzerner-stadtoriginal-laurenzius-moser-ist-erneut-zunftmeister-ld.2567270">To
+          the news</a>
+      </p>
+    </div>
   </section>
 
   <section class="">
