Added a nav bar, a grid system and a new picture

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,19 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <h1>Veggie News</h1>
+      <nav class="menu">
+        <a href="#">Take me home</a>
+        <a href="#">Get that protein!</a>
+        <a href="#">Fruits & veg</a>
+        <a href="#">Yummy desserts</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
-      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red"/>
+      <img src="./assets/ries-bosch-MZ1opmPc1Cw-unsplash.jpg" alt="Lupine flowers next to a field"/>
       <p>Photo by Ries Bosch on Unsplash</p>
-      <h2>Lupin is the new protein</h2>
+      <h2>Lupine is the new protein</h2>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic grape greens j. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens j. Arugula asparagus aubergine avocado azuki bamboo beetroot black-eyed brussels bunya burdock bush cabbage carrot caulie celery chickweed chicory corn cress cucumber dulse earthnut fava garlic gourd groundnut horseradish.
 
       Amaranth aubergine azuki bamboo bean beet beetroot bitterleaf black-eyed bok bologi bona brussels bunya cabbage carrot caulie celery chard courgette daikon desert eggplant fennel garlic grape green groundnut. Artichoke arugula avocado azuki catsear cauliflower chard collard cress dulse eggplant garbanzo gourd grape j. Amaranth arugula asparagus azuki bamboo bok bona brussels bunya burdock bush carrot caulie cauliflower chard chickpea choy corn cress cucumber dulse earthnut endive fava fennel gram grape j.
@@ -26,27 +32,25 @@
       </p>
     </section>
 
-    <section class="">
-      <div class="smallnews">
+    <div class="smallnews">
         <h3>News</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      </div>
-      <div class="smallnews">
+    </div>
+    <div class="smallnews">
         <h3>News</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      </div>
-      <div class="smallnews">
+    </div>
+    <div class="smallnews">
         <h3>News</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      </div>
-      <div class="smallnews">
+    </div>
+    <div class="smallnews">
         <h3>News</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      </div>
-    </section>
+    </div>
   </body>
 </html>
