started with header/navbar

--- a/code/index.html
+++ b/code/index.html
@@ -2,16 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Bookworm News - a News Site for Bibliophiles</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favico.ico">
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="logo">
+            <a href="file:///Users/almaherrstrom/Desktop/technigo-projects/project-news-site/code/index.html"><img class="logo-img" src="./assets/logo-book.png" /></a>
+          </div>
+          <nav class="nav">
+            <ul>
+              <li><a href="#" class="active">news</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">blog</a></li>
+              <li><a href="#">shop</a></li>
+              <li><a href="#">contact</a>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
+    <main>
 
+      <!--MAIN SECTION START HERE-->
     <section class="big-news">
       <!-- The big news content -->
     </section>
@@ -19,5 +39,6 @@
     <section class="">
       <!-- The other news  -->
     </section>
+  </main>
   </body>
 </html>
